// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`KuiSubmitButton Baseline is rendered 1`] = `
<input
  className="kuiButton"
  onClick={[Function]}
  type="submit"
/>
`;

exports[`KuiSubmitButton Props children is rendered as value 1`] = `
<input
  className="kuiButton"
  onClick={[Function]}
  type="submit"
  value="Hello"
/>
`;

exports[`KuiSubmitButton Props className renders the classes 1`] = `
<input
  className="kuiButton testClass1 testClass2"
  onClick={[Function]}
  type="submit"
/>
`;

exports[`KuiSubmitButton Props isDisabled sets the disabled attribute 1`] = `
<input
  className="kuiButton"
  disabled={true}
  onClick={[Function]}
  type="submit"
/>
`;

exports[`KuiSubmitButton Props testSubject is rendered 1`] = `
<input
  className="kuiButton"
  data-test-subj="test subject string"
  onClick={[Function]}
  type="submit"
/>
`;

exports[`KuiSubmitButton Props type basic renders the basic class 1`] = `
<input
  class="kuiButton kuiButton--basic"
  type="submit"
/>
`;

exports[`KuiSubmitButton Props type danger renders the danger class 1`] = `
<input
  class="kuiButton kuiButton--danger"
  type="submit"
/>
`;

exports[`KuiSubmitButton Props type hollow renders the hollow class 1`] = `
<input
  class="kuiButton kuiButton--hollow"
  type="submit"
/>
`;

exports[`KuiSubmitButton Props type primary renders the primary class 1`] = `
<input
  class="kuiButton kuiButton--primary"
  type="submit"
/>
`;
